err/trollflow.err
Listing '.'...
Listing './bin'...
Compiling './bin/flow_processor.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/trollflow'...
Listing './lib/python3.5/site-packages/trollflow/examples'...
Listing './lib/python3.5/site-packages/trollflow/examples/getters'...
Compiling './lib/python3.5/site-packages/trollflow/examples/getters/wget.py'...
***   File "./lib/python3.5/site-packages/trollflow/examples/getters/wget.py", line 21
    print type(self)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/trollflow/examples/readers'...
Compiling './lib/python3.5/site-packages/trollflow/examples/readers/mpop.py'...
***   File "./lib/python3.5/site-packages/trollflow/examples/readers/mpop.py", line 21
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trollflow/examples/readers/mpop_reader.py'...
***   File "./lib/python3.5/site-packages/trollflow/examples/readers/mpop_reader.py", line 21
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trollflow/examples/readers/txt_reader.py'...
***   File "./lib/python3.5/site-packages/trollflow/examples/readers/txt_reader.py", line 9
    print self.slots
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/trollflow/examples/readers/unarchiver.py'...
***   File "./lib/python3.5/site-packages/trollflow/examples/readers/unarchiver.py", line 16
    print context[self.slots[0]]["uri"]
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/trollflow/examples/transformers'...
Compiling './lib/python3.5/site-packages/trollflow/examples/transformers/capitalizer.py'...
***   File "./lib/python3.5/site-packages/trollflow/examples/transformers/capitalizer.py", line 7
    print self.slots
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/trollflow/examples/transformers/histogram.py'...
***   File "./lib/python3.5/site-packages/trollflow/examples/transformers/histogram.py", line 15
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/trollflow/examples/writers'...
Compiling './lib/python3.5/site-packages/trollflow/examples/writers/gif_writer.py'...
***   File "./lib/python3.5/site-packages/trollflow/examples/writers/gif_writer.py", line 15
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/trollflow/examples/writers/txt_writer.py'...
***   File "./lib/python3.5/site-packages/trollflow/examples/writers/txt_writer.py", line 16
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/trollflow/tests'...
Listing './lib/python3.5/site-packages/trollflow-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
